@@ -1,3 +1,6 @@
+2017-06-27  Kirit Saelensminde  <kirit@felspar.com>
+ Logging middleware also records the processing start time and duration.
+
 2017-01-03  Kirit Saelensminde  <kirit@felspar.com>
  Log better information about failed HTTP requests to the server.
 
